--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -271,7 +271,7 @@
                                                     @item.ObservationNote
                                                 </td>
                                                 <td>
-                                                    <a asp-action="EditPhone" asp-controller="Phone" asp-route-id="@item.PhoneId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-warning">
+                                                    <a asp-action="EditPhone" asp-controller="Phone" asp-route-id="@item.PhoneId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-secondary">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     <a asp-action="DeletePhone" asp-controller="Phone" asp-route-id="@item.PhoneId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-danger">
@@ -362,7 +362,7 @@
                                                     @item.ObservationAddress
                                                 </td>
                                                 <td>
-                                                    <a asp-action="EditAddress" asp-controller="Address" asp-route-id="@item.AddressId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-warning">
+                                                    <a asp-action="EditAddress" asp-controller="Address" asp-route-id="@item.AddressId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-secondary">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     <a asp-action="DeleteAddress" asp-controller="Address" asp-route-id="@item.AddressId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-danger">
@@ -458,7 +458,7 @@
                                                         @item.MonthlyIncome
                                                     </td>
                                                     <td>
-                                                        <a asp-action="EditFamilyMember" asp-controller="FamilyMember" asp-route-id="@item.FamilyMemberId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-warning">
+                                                        <a asp-action="EditFamilyMember" asp-controller="FamilyMember" asp-route-id="@item.FamilyMemberId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-secondary">
                                                             <i class="fa fa-edit"></i>
                                                         </a>
                                                         <a asp-action="DeleteFamilyMember" asp-controller="FamilyMember" asp-route-id="@item.FamilyMemberId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-danger">
