--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -90,7 +90,7 @@
                                                     @Html.DisplayFor(modelItem => item.City)
                                                 </td>
                                                 <td>
-                                                    <a asp-action="EditTreatmentPlace" asp-route-id="@item.TreatmentPlaceId" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-warning">
+                                                    <a asp-action="EditTreatmentPlace" asp-route-id="@item.TreatmentPlaceId" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-secondary">
                                                         Editar
                                                     </a>
                                                     @if (item.PatientInformationTreatmentPlaces.Count == 0)
