--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -90,7 +90,7 @@
                                                     @Html.DisplayFor(modelItem => item.Name)
                                                 </td>
                                                 <td>
-                                                    <a asp-action="EditMedicine" asp-route-id="@item.MedicineId" data-toggle="modal" data-target="#modal-action-medicine" class="btn btn-warning">
+                                                    <a asp-action="EditMedicine" asp-route-id="@item.MedicineId" data-toggle="modal" data-target="#modal-action-medicine" class="btn btn-secondary">
                                                         Editar
                                                     </a>
                                                     @if (item.PatientInformationMedicines.Count == 0)
