--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -8,7 +8,7 @@
 <main class="main">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
-            <a href="/">Home</a>
+            <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
             Remédios
