--- a/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
@@ -15,7 +15,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <h4>
-            Adicionar Telefone
+            Editar Telefone
         </h4>
 
         <div class="form-group">
