--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -50,14 +50,17 @@
                                     <input asp-for="Password" type="password" class="form-control" placeholder="Password">
                                 </div>
                                 <div class="row">
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                </div>
+                                <div class="row">
                                     <div class="col-6">
                                         <button class="btn btn-primary px-4" type="submit">Login</button>
                                     </div>
                                     <div class="col-6 text-right">
-                                        @*todo: faze o reset*@
-                                        <button class="btn btn-link px-0 disabled" type="button">Forgot password?</button>
+                                        @*todo: fazer o reset*@
+                                        <button class="btn btn-link px-0 disabled" type="button">Esqueceu a senha?</button>
                                     </div>
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    
                                 </div>
                             </div>
                         </form>
