Added DataTable backend process

--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.Doctor>
-@using LigaCancer.Code
+﻿@using LigaCancer.Code
 @{
     ViewData["Title"] = "Médicos";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -23,33 +22,6 @@
             <div class="animated fadeIn">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="card card-default">
-                            <div class="card-header">
-                                Filtro
-                            </div>
-
-                            <form asp-action="Index" method="get">
-                                <div class="card-block ">
-                                    <div class="form-horizontal">
-                                        <div class="form-group row">
-                                            <label class="col-md-3 form-control-label">Nome</label>
-                                            <div class="col-md-9">
-                                                <input class="form-control" name="searchNameString" value="@ViewData["CurrentSearchNameFilter"]" type="text">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="card-footer ">
-                                    <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i>Resetar</button>
-                                    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle"></i> Enviar</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
                                 <i class="fa fa-address-card-o"></i> Médicos
@@ -58,70 +30,31 @@
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-primary">
+                                            <a asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                                 <i class="glyphicon glyphicon-plus"></i> Adicionar Médico
                                             </a>
                                         </div>
                                     </div>
                                 </div>
 
-                                <table class="table table-bordered table-striped table-condensed">
-                                    <thead>
+                                <hr />
+
+                                <table class="table table-bordered table-striped table-condensed" id="doctorTable">
+                                    <thead class="text-center">
                                         <tr>
                                             <th>
-                                                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-page="@Model.PageIndex">
-                                                    @if (ViewData["NameSortParm"].ToString() == "name_desc")
-                                                    {
-                                                        <span class="fa fa-sort-alpha-down"></span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="fa fa-sort-alpha-up"></span>
-                                                    }
-                                                    @Html.DisplayNameFor(model => model.FirstOrDefault().Name)
-                                                </a>
+                                                Nome
                                             </th>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.FirstOrDefault().CRM)
+                                                CRM
                                             </th>
                                             <th>
                                                 Ações
                                             </th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Name)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.CRM)
-                                                </td>
-                                                <td>
-                                                    <a asp-action="EditDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-secondary">
-                                                        Editar
-                                                    </a>
-                                                    @if (item.PatientInformationDoctors.Count == 0)
-                                                    {
-                                                        <a asp-action="DeleteDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-danger">
-                                                            Deletar
-                                                        </a>
-                                                    }
-                                                    else
-                                                    {
-                                                        <a class="btn btn-danger disabled">
-                                                            Deletar
-                                                        </a>
-                                                    }
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
+                                    <tbody class="text-center"></tbody>
                                 </table>
-
-                                <partial name="_PaginationDoctor" model="Model" />
 
                             </div>
                         </div>
@@ -137,7 +70,11 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-doctor", AreaLabeledId = "modal-action-doctor-label", Size = ModalSize.Medium }' />
+<a id="linkDelete" asp-action="DeleteDoctor" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkEdit" asp-action="EditDoctor" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkAjaxDT" asp-action="GetDTResponseAsync" data-toggle="modal" data-target="#modal-action"></a>
+
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = ModalSize.Medium }' />
 
 @section scripts
     {
