--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>@ViewData["Title"] - Liga Videirense de Combate ao Câncer</title>
+    <title>@ViewData["Title"] - Rede Videirense de Combate ao Câncer</title>
     <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link href="~/css/style.css" rel="stylesheet" />
-    <link href="~/css/custom.css" rel="stylesheet" />
+    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
     @RenderSection("Styles", required: false)
 </head>
 
@@ -45,21 +45,21 @@
                         </a>
                     </li>
                     @*<li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-clipboard-list"></i> Presença
-                        </a>
-                    </li>*@
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-clipboard-list"></i> Presença
+                            </a>
+                        </li>*@
                     @*<li class="nav-title">Benefícios</li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-gift"></i> Benefícios
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
-                        </a>
-                    </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-gift"></i> Benefícios
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
+                            </a>
+                        </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Medicine" class="nav-link">
@@ -67,12 +67,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="CancerType"class="nav-link">
+                        <a asp-action="Index" asp-controller="CancerType" class="nav-link">
                             <i class="nav-icon fa fa-notes-medical"></i> Tipos de Câncer
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="TreatmentPlace"class="nav-link">
+                        <a asp-action="Index" asp-controller="TreatmentPlace" class="nav-link">
                             <i class="nav-icon fa fa-hospital-alt"></i> Locais de tratamento
                         </a>
                     </li>
@@ -82,17 +82,18 @@
                         </a>
                     </li>
                     @*<li class="nav-title">Relatórios</li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-file-medical"></i> Relatórios
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
-                        </a>
-                    </li> *@
-                    @if(User.IsInRole("Admin")){ 
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-file-medical"></i> Relatórios
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
+                            </a>
+                        </li> *@
+                    @if (User.IsInRole("Admin"))
+                    {
                         <li class="nav-title">Administrativo</li>
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="User" class="nav-link">
@@ -113,9 +114,10 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/core-ui/coreui.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/core-ui/coreui.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
+    <script src="~/js/main.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 
