--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -41,7 +41,7 @@
                                 <hr />
 
                                 <table class="table table-bordered table-striped table-condensed" id="userTable">
-                                    <thead>
+                                    <thead class="text-center">
                                         <tr>
                                             <th>
                                                 @Html.DisplayNameFor(model => model.FirstName)
@@ -57,7 +57,7 @@
                                             </th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody class="text-center">
                                         @foreach (var item in Model)
                                         {
                                             <tr>
