--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -72,7 +72,7 @@
 
 <a id="linkDelete" asp-action="DeleteDoctor" data-toggle="modal" data-target="#modal-action"></a>
 <a id="linkEdit" asp-action="EditDoctor" data-toggle="modal" data-target="#modal-action"></a>
-<a id="linkAjaxDT" asp-action="GetDTResponseAsync" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkAjaxDT" asp-action="GetDTResponseAsync" asp-controller="DoctorApi" data-toggle="modal" data-target="#modal-action"></a>
 
 <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = ModalSize.Medium }' />
 
