Added datatable to treatment place

--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -55,7 +55,7 @@
                                     <div class="form-group">
                                         <div class="btn-group">
                                             <a asp-action="AddCancerType" data-toggle="modal" data-target="#modal-action-cancerType" class="btn btn-primary">
-                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Tipo de Câncer
+                                                <i class="fa fa-plus"></i> Adicionar Tipo de Câncer
                                             </a>
                                         </div>
                                     </div>
