--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -31,7 +31,7 @@
                                     <div class="form-group">
                                         <div class="btn-group">
                                             <a asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Médico
+                                                <i class="fa fa-plus"></i> Adicionar Médico
                                             </a>
                                         </div>
                                     </div>
@@ -39,8 +39,8 @@
 
                                 <hr />
 
-                                <table class="table table-bordered table-striped table-condensed" id="doctorTable">
-                                    <thead class="text-center">
+                                <table class="table table-bordered table-striped table-condensed text-center" id="doctorTable">
+                                    <thead>
                                         <tr>
                                             <th>
                                                 Nome
@@ -53,7 +53,7 @@
                                             </th>
                                         </tr>
                                     </thead>
-                                    <tbody class="text-center"></tbody>
+                                    <tbody></tbody>
                                 </table>
 
                             </div>
