--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -55,7 +55,7 @@
                                     <div class="form-group">
                                         <div class="btn-group">
                                             <a asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action-medicine" class="btn btn-primary">
-                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Remédio
+                                                <i class="fa fa-plus"></i> Adicionar Remédio
                                             </a>
                                         </div>
                                     </div>
