--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -60,7 +60,7 @@
                                     <div class="form-group">
                                         <div class="btn-group">
                                             <a asp-action="AddPatient" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-primary">
-                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Paciente
+                                                <i class="fa fa-plus"></i> Adicionar Paciente
                                             </a>
                                         </div>
                                     </div>
