--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -67,8 +67,8 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<a id="linkDelete" asp-action="DeleteDoctor" data-toggle="modal" data-target="#modal-action"></a>
-<a id="linkEdit" asp-action="EditDoctor" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkDelete" asp-action="DeleteTreatmentPlace" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkEdit" asp-action="EditTreatmentPlace" data-toggle="modal" data-target="#modal-action"></a>
 <a id="linkAjaxDT" asp-action="GetDTResponseAsync" asp-controller="TreatmentPlaceApi" data-toggle="modal" data-target="#modal-action"></a>
 
 <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = ModalSize.Medium }' />
