--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -30,12 +30,14 @@
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action-medicine" class="btn btn-primary">
+                                            <a asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                                 <i class="fa fa-plus"></i> Adicionar Remédio
                                             </a>
                                         </div>
                                     </div>
                                 </div>
+
+                                <hr />
 
                                 <table class="table table-bordered table-striped table-condensed text-center" id="medicineTable">
                                     <thead>
