--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -30,7 +30,7 @@
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-primary">
+                                            <a asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                                 <i class="fa fa-plus"></i> Adicionar Cidade
                                             </a>
                                         </div>
